feat: move all dropdowns to a single file and remove sidebar collapse

--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import NavDropdown from "./NavDropdown.astro";
+import { dropdowns } from "./dropdowns";
 ---
 
 <div class="w-full navbar bg-base-300">
@@ -24,88 +25,11 @@ import NavDropdown from "./NavDropdown.astro";
     <div class="flex-none hidden lg:block">
         <ul class="menu menu-horizontal px-1">
             <li>
-                <NavDropdown
-                    dropdownName="Lectures"
-                    dropdownItems={{
-                        "John von Neumann Lectures": {
-                            "Brown University Symposium 2010": "",
-                            "Brown University Symposium 2015": "",
-                            "Donald Knuth at Brown": "",
-                        },
-                        "Solomon Marcus Lectures": {
-                            "Lectures 1 - 8": "",
-                            "Lectures 1 - 4": "",
-                        },
-                    }}
-                />
+                <a>Sorin Istrail</a>
             </li>
+            {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
             <li>
-                <NavDropdown
-                    dropdownName="Sorin's Essays"
-                    dropdownItems={{
-                        "John von Neumann's Axioms": "",
-                        "Edger Dijkstra's Axioms": "",
-                        "Eric Davidson's Axioms": "",
-                        "Mike Waterman's Axioms": "",
-                        "Solomon Marcus' Axioms": "",
-                    }}
-                />
-            </li>
-            <li>
-                <NavDropdown
-                    dropdownName="Research"
-                    dropdownItems={{
-                        "Statistical Physics": {
-                            "3D Ising Model and Statistical Mechanics": "",
-                        },
-                        Biology: {
-                            "Protein Folding": "",
-                            "Gene Regulatory Networks": "",
-                            "SNPs and Haplotypes": "",
-                        },
-                        "Computer Science": {
-                            "Universal Traversal Sequence": "",
-                            "Bisimulation and Semantics of Concurrent Programs":
-                                "",
-                            "Chomsky Grammars and Formal Languages": "",
-                            "Graph Theory and Book Embeddings": "",
-                        },
-                        "Number Theory": {
-                            "Context-Free Characterization of Algebraic Numbers":
-                                "",
-                        },
-                        Economics: {
-                            "An Arrow Impossibility Theorem for Protein Folding":
-                                "",
-                        },
-                    }}
-                />
-            </li>
-            <li>
-                <NavDropdown
-                    dropdownName="Sorin's Games"
-                    dropdownItems={{
-                        "Computer Science Through Urn Games": "",
-                        "The 3-Einstein": "",
-                        "Father-In-Law vs Pajamas": "",
-                    }}
-                />
-                <NavDropdown
-                    dropdownName="Memoriam"
-                    dropdownItems={{
-                        "Paul Erdos": "",
-                        "Edger Dijkstra": "",
-                        "Alan Cobham": "",
-                        "John Conway": "",
-                        "Eric Davidson": "",
-                        "Julie Nguyen Brown": "",
-                        "Freeman Dyson": "",
-                        "Ken Arrow": "",
-                    }}
-                />
-                <li>
-                    <a>Papers</a>
-                </li>
+                <a>Papers</a>
             </li>
         </ul>
     </div>
