feat: add footer

--- a/src/components/navigation/Sidebar.astro
+++ b/src/components/navigation/Sidebar.astro
@@ -3,7 +3,7 @@ import NavDropdown from "./NavDropdown.astro";
 import { dropdowns } from "./dropdowns";
 ---
 
-<ul class="menu bg-base-300 h-full">
+<ul class="menu bg-base-300 h-full z-10">
     <li>
         <a>Sorin Istrail</a>
     </li>
