feat: scaffold profile page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,62 +2,4 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Istrail Lab">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo totam
-        aliquam ea omnis itaque animi laudantium quo sequi quisquam neque ad
-        veniam, sint unde ipsum provident eaque doloribus hic laborum corrupti.
-        Repudiandae officiis culpa nihil tempora quae ea. Velit, beatae. Officia
-        repellendus ipsam minus facere culpa ut consequuntur neque dolorem
-        voluptatem aspernatur. Eum dolores ad vero, similique eveniet saepe
-        minima, nam sunt, numquam quod neque reiciendis sit cupiditate
-        necessitatibus alias dignissimos maxime ut reprehenderit suscipit fugit
-        impedit consequuntur deleniti repudiandae debitis. Veniam inventore ipsa
-        mollitia modi reiciendis maxime odio, saepe quisquam velit enim nemo
-        facere accusantium quo incidunt eveniet explicabo, doloribus quidem
-        maiores nesciunt facilis. Enim repellat vel ipsum culpa odio corporis
-        cupiditate sit labore laudantium. Ullam eius earum facilis porro
-        consectetur, nobis quia labore architecto, est esse laboriosam
-        quibusdam, accusantium enim voluptatem autem impedit magni sunt
-        perspiciatis voluptates fugiat nam voluptatibus sint soluta? Sint
-        consequuntur alias deserunt illum, in aspernatur praesentium. Neque, cum
-        quod modi sunt porro perspiciatis tempora quaerat fugit maxime error
-        aspernatur in obcaecati explicabo dolorum amet, unde eligendi voluptatum
-        labore esse! Quis a corporis modi cupiditate necessitatibus labore iure,
-        reprehenderit natus doloremque nihil, perferendis eos blanditiis
-        voluptates error ipsam incidunt odio ad alias. Consequuntur dolorum
-        commodi, dignissimos optio tenetur nemo iure. Et natus saepe vel, esse
-        odio qui quo asperiores maxime praesentium facere provident illum
-        eveniet ab? Quod laudantium et ea eos. Modi odit architecto obcaecati
-        officia velit, quia necessitatibus placeat molestiae temporibus, nisi,
-        assumenda quaerat qui ab nostrum neque fuga perferendis ipsa minima
-        sequi exercitationem. Nesciunt voluptatem, nemo earum impedit, ipsa ex
-        dignissimos nisi praesentium culpa ad fugiat perferendis recusandae eius
-        magnam odio? A necessitatibus quos, odit dignissimos vero doloremque
-        neque reiciendis ipsa incidunt, fugit illo aperiam error nemo in minima
-        cum quas, dolor itaque ab tenetur? Vel, laborum nobis. Impedit
-        doloremque, saepe debitis labore quaerat sapiente illum fugiat dolore
-        iure libero ea. Sunt facere beatae quidem, reiciendis porro architecto
-        officiis vel est corrupti ducimus? Officiis, quaerat amet eum aperiam
-        excepturi incidunt ex, maxime magni quo nesciunt assumenda molestias
-        minus eius illo ad velit deserunt aliquam placeat accusamus blanditiis
-        necessitatibus autem neque. Quidem accusamus sapiente perferendis,
-        dolor, animi, delectus culpa nostrum minus consectetur eius quas
-        suscipit. Nam et praesentium veniam quibusdam facilis numquam suscipit
-        dolores dignissimos alias doloribus sunt animi corporis aliquam natus
-        veritatis repudiandae dolore, consequuntur debitis vitae saepe
-        perspiciatis sed unde qui voluptates. Quo illo magnam dolorem, mollitia
-        sunt natus maxime esse, autem molestiae quaerat eos. Iure voluptatem
-        officiis, expedita tempora quis, error nobis aliquid repellendus
-        necessitatibus, laboriosam suscipit. Minus earum, laborum odit enim
-        magnam ipsum voluptate labore iste corporis commodi odio itaque nobis
-        magni in atque necessitatibus aspernatur neque illo fugiat ipsam
-        cupiditate voluptas. Repellendus, ut! Quo molestiae voluptatibus ut odio
-        deleniti itaque. Corporis amet harum doloribus ipsa numquam in
-        voluptatum minima deserunt saepe, iste explicabo quod aliquam, fuga sit,
-        quos expedita accusantium reprehenderit obcaecati voluptas fugiat
-        consectetur. Nam, praesentium iusto. Culpa recusandae ducimus aperiam,
-        voluptatem minima quas veritatis rem vitae itaque nostrum? Sed tenetur,
-        blanditiis beatae quos alias facere voluptatum reprehenderit.
-    </p>
-</Layout>
+<Layout title="Istrail Lab" />
