feat: scaffold von neumann lectures

--- a/src/components/navigation/Sidebar.astro
+++ b/src/components/navigation/Sidebar.astro
@@ -5,7 +5,7 @@ import { dropdowns } from "./dropdowns";
 
 <ul class="menu bg-base-300 h-full z-10">
     <li>
-        <a>Sorin Istrail</a>
+        <a href="/sorin-istrail">Sorin Istrail</a>
     </li>
     {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
     <li>
