--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -5,7 +5,7 @@ import { dropdowns } from "./dropdowns";
 
 <div class="w-full navbar bg-base-300">
     <div class="flex-1 px-2 mx-2">
-        <a class="btn btn-ghost normal-case text-xl">Istrail Lab</a>
+        <a class="btn btn-ghost normal-case text-xl" href="/">Istrail Lab</a>
     </div>
     <div class="flex-none lg:hidden">
         <label for="nav-drawer" class="btn btn-square btn-ghost">
@@ -25,7 +25,7 @@ import { dropdowns } from "./dropdowns";
     <div class="flex-none hidden lg:block">
         <ul class="menu menu-horizontal px-1">
             <li>
-                <a>Sorin Istrail</a>
+                <a href="/sorin-istrail">Sorin Istrail</a>
             </li>
             {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
             <li>
