--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -29,7 +29,7 @@ import { dropdowns } from "./dropdowns";
             </li>
             {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
             <li>
-                <a>Papers</a>
+                <a href="/publications">Publications</a>
             </li>
         </ul>
     </div>
