--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,6 @@ import "../styles/globals.css";
 
     <div class="flex gap-10 py-8">
         <ResearchAccordion client:load />
-        <div class="basis-full w-full h-96 bg-green-500"></div>
+        <!-- <div class="basis-full w-full h-96 bg-green-500"></div> -->
     </div>
 </Layout>
