global style file

--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import PublicationList from "../components/publicationList/PublicationList";
 import { publications } from "../components/publicationList/publications";
+import "../styles/globals.css";
 ---
 
 <Layout title="Istrail Lab | Publications">
