--- a/src/pages/sorin-istrail.astro
+++ b/src/pages/sorin-istrail.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import istrail from "../assets/istrail.jpg";
+import "../styles/globals.css";
 ---
 
 <Layout title="Istrail Lab | Sorin Istrail">
