--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="footer items-center p-4 bg-neutral text-neutral-content">
+<footer class="footer items-center p-4 bg-neutral text-neutral-content mt-20">
     <div class="items-center grid-flow-col">
         <p>Copyright Istrail Lab © 2023 - All right reserved</p>
     </div>
