--- a/src/pages/sorin-istrail.astro
+++ b/src/pages/sorin-istrail.astro
@@ -1,11 +1,51 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import istrail from "../assets/istrail.jpg";
+import BlockQuote from "@/components/BlockQuote";
+import GrantCard from "@/components/GrantCard";
+import PositionCard from "@/components/PositionCard";
 import "../styles/globals.css";
+
+import istrail from "../assets/istrail.jpg";
+import ccmb from "../assets/positions/ccmb_web_small.png";
+import celera from "../assets/positions/science_291_5507.gif";
+import sandia from "../assets/positions/proFoldingProtein.gif";
+
+const grants = [
+    {
+        name: "NSF Grant",
+        role: "Principal Investigator",
+        year: "",
+        title: "Sweat-Box Sessions: Training in the Art of Asking Tough Scientific Questions",
+    },
+    {
+        name: "NSF Grant",
+        role: "Principal Investigator",
+        year: "2010",
+        title: "Genome-Wide Algorithms for Haplotype Reconstruction and Beyond: A Combined Haplotype Assembly and Identical-by-Descent Tracts Approach",
+    },
+    {
+        name: "NSF Grant",
+        role: "Co-Principal Investigator",
+        year: "2010",
+        title: "IGERT - Reverse Ecology: Computational Integration of Genomes, Organisms, and Environments",
+    },
+    {
+        name: "Brown University First Translational Seed Grant Award",
+        role: "Co-Principal Investigator",
+        year: "2013",
+        title: "",
+    },
+    {
+        name: "Brown University Seed Grant Award",
+        role: "Co-Principal Investigator",
+        year: "2014",
+        title: "Autism Genomics Research",
+    },
+];
 ---
 
 <Layout title="Istrail Lab | Sorin Istrail">
-    <div class="grid grid-cols-2 p-4">
+    <div class="grid md:grid-cols-2 p-4">
         <div class="flex flex-col items-center">
             <img src={istrail} alt="Sorin Istrail" />
             <h2 class="font-bold p-4">Sorin Istrail</h2>
@@ -31,5 +71,84 @@ import "../styles/globals.css";
                 </p>
             </div>
         </div>
+    </div>
+
+    <BlockQuote author="Sorin Istrail" journal="Vision For Brown">
+        Engaging the world, one inspiring course, one innovative student, one
+        influential research leader at a time.
+    </BlockQuote>
+
+    <p class="p-2">
+        Sorin Istrail is the Julie Nguyen Brown Professor of Computational and
+        Mathematical Sciences and Professor of Computer Science, and former
+        Director of the Center for Computational Molecular Biology at Brown
+        University. He is Professor Honoris Causa of the Alexandru Ioan Cuza
+        University, Iasi, Romania.
+    </p>
+    <p class="p-2">
+        Before joining Brown, he was the Senior Director and Head of Informatics
+        Research at Celera Genomics, where his group played a central role in
+        the construction of the sequence of the human genome; they co-authored
+        the 2001 Science paper "The Sequence of the Human Genome", which, with
+        over 12,000 citations to date, is one of the most cited scientific
+        paper. His group at Celera Genomics also built a powerful suite of
+        genome-wide algorithms that was used for the comparison of all human
+        genome assemblies to date. In 2002, his Celera group in collaboration
+        with the company ClearForrest won the ACM KDD Cup - the top
+        international data mining/machine learning competition. The challenge
+        then was the automatic annotation of a section of the Drosophila genome.
+    </p>
+    <p class="p-2">
+        In 2003, he joined the ranks of Applied Biosystems Science Fellows, one
+        of just six science fellows in a company of 800 scientists. Before
+        Celera, Professor Istrail founded and led the Computational Biology
+        Project at Sandia National Laboratories (1992-2000). In 2000, he
+        obtained the negative solution (computational intractability) of a 50
+        years old unresolved problem in statistical mechanics, the
+        Three-Dimensional Ising Model Problem. This work was included in the Top
+        100 Most Important Discoveries of the U.S. Department of Energy's first
+        25 years, and as the 7th top achievement of DOE in Advanced Scientific
+        Computing.
+    </p>
+    <p class="p-2">
+        Professor Istrail's current research focuses on computational molecular
+        biology, human genetics and genome-wide associations studies, medical
+        bioinformatics of autism, multiple sclerosis, HIV, preterm labor and
+        viral immunology, algorithms and computational complexity, and
+        statistical physics. He is editor-in-chief of the Journal of
+        Computational Biology, and together with Pavel Pevzner and Mike
+        Waterman, he is co-founder with of the RECOMB Conference series,
+        co-editor of the MIT Press Computational Molecular Biology series, and
+        co-editor of the Springer-Verlag Lecture Notes in Bioinformatics series.
+    </p>
+    <p class="p-2">
+        He has Erdos number 2 and postcard-Erdos number 1. He has 9 links to
+        Euler and 11 links to Leibniz.
+    </p>
+
+    <div class="p-8 flex flex-wrap gap-4 md:flex-nowrap justify-around">
+        <PositionCard
+            img={ccmb}
+            position="Director, Center of Computational Biology"
+            location="Brown University"
+            time="2006 — 2011"
+        />
+        <PositionCard
+            img={celera}
+            position="Senior Director and Head of Informatics"
+            location="Celera Genomics"
+            time="2000 — 2005"
+        />
+        <PositionCard
+            img={sandia}
+            position="Principal Member of Technical Staff and Project Leader"
+            location="Sandia National Laboratories"
+            time="1992 — 2000"
+        />
+    </div>
+
+    <h2 class="text-2xl font-bold">Grants</h2>
+    <div class="grid gap-4 py-4">
+        {grants.map((grant) => <GrantCard grant={grant} />)}
     </div>
 </Layout>
