add essays and games

--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -2,14 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 import PublicationList from "../components/publicationList/PublicationList";
 import { publications } from "../components/publicationList/publications";
-import "../styles/globals.css";
 ---
 
 <Layout title="Istrail Lab | Publications">
-    <h1
-        class="flex items-center justify-center text-center text-4xl font-bold mt-10"
-    >
-        Publications
-    </h1>
+    <h2 class="flex-1 text-3xl font-bold pt-8">Publications</h2>
     <PublicationList publications={publications} />
 </Layout>
