--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -29,6 +29,9 @@ import { dropdowns } from "./dropdowns";
             </li>
             {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
             <li>
+                <a href="/essays">Essays</a>
+            </li>
+            <li>
                 <a href="/publications">Publications</a>
             </li>
         </ul>
