--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ const { title } = Astro.props;
 import Navbar from "../components/navigation/Navbar.astro";
 import Sidebar from "../components/navigation/Sidebar.astro";
 import Footer from "../components/navigation/Footer.astro";
+import "../styles/globals.css";
 import { Worker } from "@react-pdf-viewer/core";
 ---
 
