fix url for deployment

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -8,14 +8,14 @@ const essays: Publication[] = [
         authors: [],
         title: "Brown University: 250th Anniversary Symposium: The Next 250 Years",
         year: 2015,
-        pdf: "papers/250th Anniversary Symposium.pdf",
+        pdf: "/papers/250th Anniversary Symposium.pdf",
     },
     {
         authors: ["Sorin Istrail", "Solomon Marcus"],
         title: "Turing and von Neumann's Brains and their Computers",
         year: 2012,
         journal: "International Conference on Membrane Computing",
-        pdf: "papers/Turing and von Neumann's Brains and their Computers.pdf",
+        pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
     },
     {
         authors: ["Leon N. Cooper", "Sorin Istrail"],
@@ -28,7 +28,7 @@ const essays: Publication[] = [
         authors: ["Sorin Istrail"],
         title: "Ode to Computational Biology: A letter in support of awarding the National Medal of Science to Professor Michael Waterman",
         year: 2012,
-        pdf: "papers/Ode to Computational Biology.pdf",
+        pdf: "/papers/Ode to Computational Biology.pdf",
     },
     {
         authors: ["Sorin Istrail"],
@@ -36,7 +36,7 @@ const essays: Publication[] = [
         year: 2011,
         journal:
             "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-        pdf: "papers/MarcusAxioms.pdf",
+        pdf: "/papers/MarcusAxioms.pdf",
     },
     {
         authors: ["Sorin Istrail"],
@@ -44,7 +44,7 @@ const essays: Publication[] = [
         journal: "Conduit",
         volume: "19.1",
         year: 2010,
-        pdf: "papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
+        pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
     },
     {
         authors: [
@@ -57,7 +57,7 @@ const essays: Publication[] = [
         journal: "Communications in Information and Systems",
         publisher: "International Press",
         year: 2009,
-        pdf: "papers/TributeBirthdayWaterman67.pdf",
+        pdf: "/papers/TributeBirthdayWaterman67.pdf",
     },
     {
         authors: ["Sorin Istrail"],
@@ -65,7 +65,7 @@ const essays: Publication[] = [
         journal: "Conduit",
         volume: "17.2",
         year: 2008,
-        pdf: "papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
+        pdf: "/papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
     },
     {
         authors: ["Sorin Istrail", "Tracie Sweeney"],
@@ -73,14 +73,14 @@ const essays: Publication[] = [
         journal: "Conduit",
         volume: "9",
         year: 2006,
-        pdf: "papers/Randomness is Beautiful: in Search of von Neumann.pdf",
+        pdf: "/papers/Randomness is Beautiful: in Search of von Neumann.pdf",
     },
     {
         authors: ["Sorin Istrail"],
         title: 'Review of Eric Davidson\'s book "The Regulatory Genome: Gene Regulatory Networks in Development and Regulation"',
         publisher: "Academic Press",
         year: 2006,
-        pdf: "papers/Review of Davidson book.pdf",
+        pdf: "/papers/Review of Davidson book.pdf",
     },
     {
         authors: ["Sorin Istrail"],
@@ -93,20 +93,20 @@ const essays: Publication[] = [
         title: "Dijkstra's Letter to Istrail",
         authors: ["Edsgar W. Dijkstra"],
         year: 1983,
-        pdf: "papers/DijkstraLetter.pdf",
+        pdf: "/papers/DijkstraLetter.pdf",
     },
     {
         title: "Istrail's Letter to Dijkstra",
         authors: ["Sorin Istrail"],
         year: 1983,
-        pdf: "papers/SorinLetter.pdf",
+        pdf: "/papers/SorinLetter.pdf",
     },
     {
         authors: ["Sorin Istrail"],
         title: 'Review of Edsger W. Dijkstra\'s book "Selected Writings on Computing: A Personal Persepective"',
         publisher: "Springer-Verlag",
         year: 1982,
-        pdf: "papers/Review of Dijkstra Book.pdf",
+        pdf: "/papers/Review of Dijkstra Book.pdf",
     },
 ];
 
@@ -116,7 +116,7 @@ const games: Publication[] = [
         title: "Computer Science Through Urn Games: An Unified Framework for a Hierarchy of Solvable and Unsolvable Problems",
         year: 2012,
         journal: "Proceedings of the Turin Centenary Conference",
-        pdf: "papers/CS Through Urn Games - An Unified Approach.pdf",
+        pdf: "/papers/CS Through Urn Games - An Unified Approach.pdf",
     },
 ];
 ---
