--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -22,7 +22,7 @@ const essays: Publication[] = [
         title: "Mental Experience and the Turing Test: This Double Face is the Face of Mathematics",
         year: 2012,
         journal: "In Proceedings of the Turing Centenary Conference",
-        pdf: "papers/Mental Experience and the Turing Test.pdf",
+        pdf: "/papers/Mental Experience and the Turing Test.pdf",
     },
     {
         authors: ["Sorin Istrail"],
