add new research papers

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -9,6 +9,7 @@ const essays: Publication[] = [
         title: "Brown University: 250th Anniversary Symposium: The Next 250 Years",
         year: 2015,
         pdf: "/papers/250th Anniversary Symposium.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail", "Solomon Marcus"],
@@ -16,6 +17,7 @@ const essays: Publication[] = [
         year: 2012,
         journal: "International Conference on Membrane Computing",
         pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
+        tags: [],
     },
     {
         authors: ["Leon N. Cooper", "Sorin Istrail"],
@@ -23,12 +25,14 @@ const essays: Publication[] = [
         year: 2012,
         journal: "In Proceedings of the Turing Centenary Conference",
         pdf: "/papers/Mental Experience and the Turing Test.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
         title: "Ode to Computational Biology: A letter in support of awarding the National Medal of Science to Professor Michael Waterman",
         year: 2012,
         pdf: "/papers/Ode to Computational Biology.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -37,6 +41,7 @@ const essays: Publication[] = [
         journal:
             "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
         pdf: "/papers/MarcusAxioms.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -45,6 +50,7 @@ const essays: Publication[] = [
         volume: "19.1",
         year: 2010,
         pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
+        tags: [],
     },
     {
         authors: [
@@ -58,6 +64,7 @@ const essays: Publication[] = [
         publisher: "International Press",
         year: 2009,
         pdf: "/papers/TributeBirthdayWaterman67.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -66,6 +73,7 @@ const essays: Publication[] = [
         volume: "17.2",
         year: 2008,
         pdf: "/papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail", "Tracie Sweeney"],
@@ -74,6 +82,7 @@ const essays: Publication[] = [
         volume: "9",
         year: 2006,
         pdf: "/papers/Randomness is Beautiful: in Search of von Neumann.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -81,6 +90,7 @@ const essays: Publication[] = [
         publisher: "Academic Press",
         year: 2006,
         pdf: "/papers/Review of Davidson book.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -88,18 +98,21 @@ const essays: Publication[] = [
         year: 1984,
         journal:
             "Bulletin of the European Association for Theoretical Computer Science",
+        tags: [],
     },
     {
         title: "Dijkstra's Letter to Istrail",
         authors: ["Edsgar W. Dijkstra"],
         year: 1983,
         pdf: "/papers/DijkstraLetter.pdf",
+        tags: [],
     },
     {
         title: "Istrail's Letter to Dijkstra",
         authors: ["Sorin Istrail"],
         year: 1983,
         pdf: "/papers/SorinLetter.pdf",
+        tags: [],
     },
     {
         authors: ["Sorin Istrail"],
@@ -107,6 +120,7 @@ const essays: Publication[] = [
         publisher: "Springer-Verlag",
         year: 1982,
         pdf: "/papers/Review of Dijkstra Book.pdf",
+        tags: [],
     },
 ];
 
@@ -117,6 +131,7 @@ const games: Publication[] = [
         year: 2012,
         journal: "Proceedings of the Turin Centenary Conference",
         pdf: "/papers/CS Through Urn Games - An Unified Approach.pdf",
+        tags: [],
     },
 ];
 ---
