--- a/src/pages/games/father-in-law-vs-pajamas.astro
+++ b/src/pages/games/father-in-law-vs-pajamas.astro
@@ -11,6 +11,7 @@ const paper: Publication = {
     volume: "19.1",
     year: 2010,
     pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
+    tags: [],
 };
 ---
 
