--- a/src/layouts/ResearchLayout.astro
+++ b/src/layouts/ResearchLayout.astro
@@ -30,7 +30,7 @@ import "../styles/globals.css";
                     style="max-width: min(100ch, 100% - 4rem)"
                     class="mx-auto"
                 >
-                    <h3 class="text-2xl font-bold py-4">Abstract</h3>
+                    <h3 class="text-2xl font-bold py-4">Research Summary</h3>
                     <slot name="abstract" />
 
                     <slot name="quote" />
