update navbar links

--- a/src/components/navigation/Sidebar.astro
+++ b/src/components/navigation/Sidebar.astro
@@ -3,7 +3,7 @@ import NavDropdown from "./NavDropdown.astro";
 import { dropdowns } from "./dropdowns";
 ---
 
-<ul class="menu bg-base-300 h-full z-10">
+<ul class="menu bg-base-300 h-full z-10 w-1/2 overflow-x-auto">
     <li>
         <a href="/sorin-istrail">Sorin Istrail</a>
     </li>
