add title to research page

--- a/src/pages/research/bisimulation.astro
+++ b/src/pages/research/bisimulation.astro
@@ -10,7 +10,7 @@ const relevantPapers = publications.filter((paper) =>
 ---
 
 <ResearchLayout
-    title="Istrail Lab | Bisimulation, Semantics of Concurrent Programs, and Logic of Programs"
+    title="Bisimulation, Semantics of Concurrent Programs, and Logic of Programs"
 >
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
