--- a/src/pages/research/graph-theory.astro
+++ b/src/pages/research/graph-theory.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | Graph Theory and Book Embeddings">
+<ResearchLayout title="Graph Theory and Book Embeddings">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
