--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
 import BlockQuote from "@/components/BlockQuote";
 import GrantCard from "@/components/GrantCard";
 import PositionCard from "@/components/PositionCard";
@@ -7,10 +7,10 @@ import EssayCard from "@/components/EssayCard";
 import HonorRollList from "@/components/honorRoll/HonorRollList";
 import { students } from "@/components/honorRoll/honorRoll";
 
-import istrail from "../assets/istrail.jpg";
-import ccmb from "../assets/positions/ccmb_web_small.png";
-import celera from "../assets/positions/science_291_5507.gif";
-import sandia from "../assets/positions/proFoldingProtein.gif";
+import istrail from "@/assets/istrail.jpg";
+import ccmb from "@/assets/positions/ccmb_web_small.png";
+import celera from "@/assets/positions/science_291_5507.gif";
+import sandia from "@/assets/positions/proFoldingProtein.gif";
 
 const grants = [
     {
