--- a/src/layouts/ResearchLayout.astro
+++ b/src/layouts/ResearchLayout.astro
@@ -19,7 +19,7 @@ import "../styles/globals.css";
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
-        <title>{title}</title>
+        <title>Istrail Lab | {title}</title>
     </head>
     <body class="drawer drawer-end h-full">
         <input id="nav-drawer" type="checkbox" class="drawer-toggle" />
@@ -30,6 +30,7 @@ import "../styles/globals.css";
                     style="max-width: min(100ch, 100% - 4rem)"
                     class="mx-auto"
                 >
+                    <h2 class="text-3xl font-bold pt-4">{title}</h2>
                     <h3 class="text-2xl font-bold py-4">Research Summary</h3>
                     <slot name="abstract" />
 
