--- a/src/pages/research/formal-languages.astro
+++ b/src/pages/research/formal-languages.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | Chomsky Grammars and Formal Languages">
+<ResearchLayout title="Chomsky Grammars and Formal Languages">
     <div slot="abstract" class="grid gap-2">
         <p>Coming soon!</p>
     </div>
