--- a/src/pages/research/ising-model.astro
+++ b/src/pages/research/ising-model.astro
@@ -9,7 +9,7 @@ const relevantPapers = publications.filter((paper) =>
 );
 ---
 
-<ResearchLayout title="Istrail Lab | 3D Ising Model">
+<ResearchLayout title="3D Ising Model">
     <div slot="abstract" class="grid gap-2">
         <p>
             This work provides an exact characterization, across crystal
